kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buzzify-service
spec:
  selector:
    app: buzzify
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: backend
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
